# batchTool_openCirt

./: .gitignore  ADDITIONAL_TERMS  CLEAN_BUILD.bat  CMakeLists.txt  LICENSE  README.md
docs/: DEVELOPMENT.md
sample_project/: BEDIENUNGSANLEITUNG.md
sample_project/00- BricsCAD Plugin/00- Windows Version/: batchtool.brx
sample_project/01- Referenzen/: BAS.csv  GA_FL_VORLAGE.ods  opencirt_config.json  plankopfdaten.csv
sample_project/02- Skripte/: BmkNummerierung.lsp  ExtractDP.lsp  FillGaFl.lsp  GenBas.lsp  TextBreitenAnpassenBloecke.lsp
sample_project/03- Blockbibliothek/: OC_VORLAGE_1_HW_MELDUNG_GA_V1.dwg  OC_VORLAGE_VENTILATOR_OBEN_UNTEN_RLT_V3.dwg
sample_project/03- Blockbibliothek/00- Vorlagensymbol/: Symbolvorlage_20_DP_V_1_0.dwg
sample_project/03- Blockbibliothek/01- Pfeile/: OC_VORLAGE_DP_PFEIL_AI_V1.dwg  OC_VORLAGE_DP_PFEIL_AO_V1.dwg  OC_VORLAGE_DP_PFEIL_BI_V1.dwg  OC_VORLAGE_DP_PFEIL_BO_V1.dwg  OC_VORLAGE_PFEIL_V1.dwg
sample_project/04- Vorlagen/: OC_VORLAGE_DIN_A2_V12.dwg  OC_VORLAGE_EINTRAG_INHALT_DIN_A2_V_4.dwg  OC_VORLAGE_GA_FL.dwg
sample_project/05- Projekt Zeichnungen/01 Los 1/01 ASP01/01 GA/01 SSK-1000/: 00 SSK interne Datenpunkte Beispiel.dwg
src/: brx_force_include.h  windows_fix.h
src/core/: DwgProcessor.cpp  DwgProcessor.h  LispProcessExecutor.cpp  LispProcessExecutor.h
src/data/: Configuration.cpp  ProcessingOptions.h  ProcessingOptionsImpl.cpp
src/mfc_stubs/: afxdisp.h
src/plugin/: BatchProcessingPlugin.cpp  BatchProcessingPlugin.h  Commands.cpp  Commands.h
src/ui/: MainWindow.cpp  MainWindow.h  OpenCirtTab.cpp  OpenCirtTab.h
src/ui/widgets/: AcadColorGrid.cpp  AcadColorGrid.h
src/utils/: Logger.h
